# twitchirc

./: .coveragerc  README.md  envexample  pyproject.toml  run_tests.py
.github/workflows/: codeql-analysis.yml  python-app.yml  python-publish.yml  python-testing.yml
src/twitchirc_drgreengiant/: offlineirc.py  twitchirc.py
tests/: test_twitch.py
