[build-system]
requires = ["pytest", "pytest-cov", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "twitchirc_drgreengiant"
version = "2.1.0"
authors = [{ name = "Simon Howroyd", email = "howroydlsu@gmail.com" }]
description = "A simple receive only Twitch IRC client"
keywords = ["twitch", "irc", "chat"]
readme = "README.md"
requires-python = ">=3.11.4"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]

[project.urls]
"Homepage" = "https://github.com/howroyd/twitchirc"
"Repository" = "https://github.com/howroyd/twitchirc"
"Bug Tracker" = "https://github.com/howroyd/twitchirc/issues"

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "2.0"
python_files = ["tests/test_*.py", "tests/*_test.py"]
addopts = [
  "--cov=.",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-fail-under=95",
]
filterwarnings = "ignore::DeprecationWarning"
